--- a/style.css
+++ b/style.css
@@ -33,10 +33,12 @@ nav ul {
     list-style-type: none;
     display: flex;
     justify-content: center;
+    padding-inline-start: 0;
 }
 
 nav li {
     padding: 0.9em;
+    
 }
 
 nav a {
@@ -326,6 +328,7 @@ footer span {
     {
         font-size: 15px;
     }
+
     nav ul {
         display: Flex;
         flex-direction: column;
