style.css updated

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ header {
 
 h1 {
     margin-bottom: 0px;
+    margin-top:5px;
     font-size: 3rem;
     color: #143774;
     font-family: 'Lora', serif;
